--- a/resources/static/troll.css
+++ b/resources/static/troll.css
@@ -1,35 +1,69 @@
-/*troll.gg css요소*/
-.ngNavIndex{
-		/*top:30%;
-		position: fixed;*/
-		transition: all 0.5s;
-	}
-	.ngNavOther{
-		/*top:0%;
-		position: fixed;*/
-		transition: all 0.5s;
-	}
-	
-	.ngFade{
-		opacity: 1
-	}
-	.ngFade.ng-enter{
-		opacity: 0;
-		transition:all 1s;
-	}
-	.ngFade.ng-enter-active{
-		opacity: 1;
-	}
-	.ngGridSearch{
-		transition: all 0.5s
-	}
-	.section{
-		z-index:1;
-	}
-	
 
-	#myVideo{
-		position: absolute;
+.ngNavIndex{
+      /*top:30%;
+      position: fixed;*/
+      transition: all 0.5s;
+   }
+   .ngNavOther{
+      /*top:0%;
+      position: fixed;*/
+      transition: all 0.5s;
+   }
+   
+   .ngFade{
+      opacity: 1;
+      
+   }
+   .ngFade.ng-enter{
+      opacity: 0;
+      transition:all 1s;
+   }
+   .ngFade.ng-enter-active{
+      opacity: 1;
+   }
+   .enter.ng-enter{
+      height: 0px;
+      overflow: hidden;
+      transition:all 0.5s;
+   }
+   .enter.ng-enter-active{
+      height: 120px;
+      
+   }
+   .leave.ng-leave{
+      height: 120px;
+      overflow: hidden;
+      transition:all 0.5s;
+   }
+   .leave.ng-leave-active{
+      height: 0px;
+      
+   }
+   .section{
+      z-index:4;
+   }
+   .ngVideo{
+      opacity: 1;
+   }
+   .ngVideo.ng-leave{
+      opacity: 1;
+      transition: all 0.5s;
+   }
+   .ngVideo.ng-leave-active{
+      opacity: 0;
+   }
+   .summonerdata{
+   	font-weight: bold;
+   }
+	.nav-profileicon{
+		position: relative;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+	}
+	.backVideo{
+		position: fixed;
 		right: 0;
 		bottom: 0;
 		top:0;
@@ -45,7 +79,7 @@
    		z-index:1;
 	}
 	.backCover{
-		position: absolute;
+		position: fixed;
 		right: 0;
 		bottom: 0;
 		top:0;
@@ -76,8 +110,16 @@
   		background-size: contain;
   		z-index: 0;
 	}
+	.backCover.ng-enter{
+		background-color: rgba(0,0,0,0);
+		transition: all 1s;
+	}
+	.backCover.ng-enter-active{
+		background-color: rgba(0,0,0,0.5);
+		transition: all 1s;
+	}
 	.backCover.ng-leave{
-		background-color: rgba(0,0,0,1);
+		background-color: rgba(0,0,0,0.5);
 		transition: all 1s;
 	}
 	.backCover.ng-leave-active{
@@ -85,3 +127,83 @@
 		transition: all 1s;
 	}
 
+	.loadingCover{
+		position: fixed;
+		right: 0;
+		bottom: 0;
+		top:0;
+		right:0;
+		width: 100%;
+		height: 100%;
+		background-size: 100% 100%;
+ 		background-color: rgba(0,0,0,0.8); /* in case the video doesn't fit the whole page*/
+  		background-image: /* our video */;
+  		background-position: center center;
+  		background-size: contain;
+   		object-fit: cover; /*cover video background */
+  		z-index:5;
+   		transition: all 0.5s;
+	}
+	.loadingCover.ng-enter{
+		background-color: rgba(0,0,0,0.0);
+		transition: all 1s;
+	}
+	.loadingCover.ng-enter-active{
+		background-color: rgba(0,0,0,0.7);
+		transition: all 1s;
+	}
+	.profile-data{
+		height: 100px;
+	}
+	.search-side-nav{
+		background-color: black;
+		color:#fff !important;
+	}
+	.search-side-nav a{
+		color:#fff;
+	}
+	.tierimg{
+		position: relative;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height:100%;
+	}
+	/*.loadingCover.ng-leave{
+		background-color: rgba(0,0,0,0.5);
+		transition: all 1s;
+	}
+	.loadingCover.ng-leave-active{
+		background-color: rgba(0,0,0,0);
+		transition: all 1s;
+	}*/
+	input[type=text][readonly="readonly"]{
+		color: black;
+	}
+	input[type=text][readonly="readonly"]+label{
+		color: black;
+	}
+	textarea.materialize-textarea[readonly="readonly"]{
+		color: black;
+	}
+	textarea.materialize-textarea[readonly="readonly"]+label{
+		color: black;
+	}
+	.reply.ng-enter{
+      height: 0px;
+      overflow: hidden;
+      transition:all 0.5s;
+   }
+   .reply.ng-enter-active{
+      height: 200px;
+      
+   }
+   .reply.ng-leave{
+      height: 200px;
+      overflow: hidden;
+      transition:all 0.5s;
+   }
+   .reply.ng-leave-active{
+      height: 0px;
+      
+   }
